--- a/README
+++ b/README
@@ -1,2 +1,15 @@
 # Toxicity Analysis for Talk Edit page in Wikipedia
-Built a text classifier using NLP and the Support vector classifier (SVC) model in Python to determine toxic comments in the Talk edit pages on Wikipedia for a 70:30 data set split.
+
+Built a text classifier from scratch using NLP text processing and the Support vector classifier (SVC) model in Python to determine toxic comments in 
+      the Talk edit pages on Wikipedia for a 70:30 data set split on the Wikipedia comments dataset acquired from Kaggle. 
+      
+Used a Grid search model to Hyper-parameter tunning to optimize the SVC model which resulted in an 86% accuracy in toxic text classification.
+
+Purpose of the project was to build the model from scratch to learn the model building libraries and processes in the NLP and how to evaluate
+and fine-tune them despite the availability of various pretrained libraries based on large data.
+
+# Twitter Sentimment Analysis Using TextBlob libraries
+  
+  Built the Sentiment Analysis model using TextBlob which is a lexicon based approach where sentiment is measured by the semantic oriantation and intensity of each word
+  in the sentence.
+
