--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-#Projects List on Sentiment Analysis,Customer Reviews,Toxicity, etc.
+## Projects List on Sentiment Analysis,Customer Reviews,Toxicity, etc.
 
 1. Toxicity Analysis for Talk Edit page in Wikipedia
 
